fixed text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ body {
     margin: 8px -16px;
   }
   
-  /* Add padding BETWEEN each column (if you want) */
+  /* Add padding BETWEEN each column */
   .row,
   .row > .column {
     padding: 8px;
@@ -229,7 +229,7 @@ body {
     padding: 10px;
   }
 
-  p {
+  h5 {
     text-align: center;
   }
   
